@@ -8,6 +8,8 @@ To do:
 - 14/09/2004, version 1.80: roms
 	- fixed HW3 support
 	- fixed bug in LCD snoop range register: TI89 Titanium (patched) and V200 (patched) work.
+	- fixed bug in FLASH emulation (algorithm)
+	- fixed ROM size handling with TI89 Titanium & V200
 
 - 28/08/2004, version 1.80: roms
 	- fixed vectors copy
